--- a/style.css
+++ b/style.css
@@ -1,54 +1,160 @@
 body{
-    background-color: #222222;
+    background-color: #BB2528;
+    overflow: hidden;
+
+    animation-timing-function: linear;
+    animation-name: backgroundAnimation;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
 }
 
-a{
-    color: black;
-    text-decoration: none;
+@keyframes backgroundAnimation{
+    0%{background-color: #BB2528;}
+    50%{background: #EA4630;}
+    100%{background: #BB2528;}
+}
+
+#giftbox{
+    width: 100%;
+}
+
+#centerdiv{
+    margin: auto;
+    width: 10vw;
+    position: relative;
+    top: 30vh;
+}
+
+.snowflake{
+    position: relative;
+    top: -20vh;
+
+    animation-timing-function: ease-in;
+    animation-name: snowflakeAnimation;
+    animation-iteration-count: infinite;
+}
+
+#sf1{
+    width: 10vh;
+    left: 5vw;
+    animation-duration: 5s;
+    animation-delay: 0.75s;
+}
+#sf2{
+    width: 8vh;
+    left: 5vw;
+    animation-duration: 4s;
+    animation-delay: 0s;
+}
+#sf3{
+    width: 6vh;
+    left: 7vw;
+    animation-duration: 7s;
+    animation-delay: 0.5s;
+}
+#sf4{
+    width: 5vh;
+    left: 15vw;
+    animation-duration: 10s;
+    animation-delay: 1s;
+}
+#sf5{
+    width: 9vh;
+    left: 20vw;
+    animation-duration: 8s;
+    animation-delay: 1.5s;
+}
+#sf6{
+    width: 10vh;
+    left: 38vw;
+    animation-duration: 6s;
+    animation-delay: 0s;
+}
+#sf7{
+    width: 8vh;
+    left: 45vw;
+    animation-duration: 3s;
+    animation-delay: 1s;
+}
+#sf8{
+    width: 6vh;
+    left: 49vw;
+    animation-duration: 8s;
+    animation-delay: 0.5s;
+}
+#sf9{
+    width: 5vh;
+    left: 54vw;
+    animation-duration: 4s;
+    animation-delay: 1.5s;
+}
+#sf10{
+    width: 9vh;
+    left: 58vw;
+    animation-duration: 7s;
+    animation-delay: 0s;
+}
+
+@keyframes snowflakeAnimation{
+    0% {top: -20vh; transform: rotate(0deg);}
+    100% {top: 150vh; transform: rotate(360deg);}
 }
 
 .dropdown {
-    width: 8vw;
+    width: 10vw;
     font-size: 2vh;
     font-family: Calibri;
 }
 
 .dropdown-button {
-    width: 8vw;
-    background-color: #232323;
+    width: 10vw;
+    background-color: #BB2528;
     box-sizing: border-box;
     padding: 2vh;
     cursor: pointer;
     text-align: center;
     font-size: 2vh;
     font-family: Calibri;
+    font-weight: Bold;
     color: white;
+    border: white 5px solid;
 }
 
 .dropdown-content {
-    display: none;
-    height: 0vh;
+    display: block;
     position: relative;
     padding: 1vh 0.5vw;
     text-align: center;
-    background-color: #EEEEEE;
+    background-color: white;
     box-shadow: 0vh 0.5vh 2vh 0.25vh #e1e1e133;
     overflow: hidden;
+    height: 0vh;
 }
 
 .show {
-    display: block;
     animation-timing-function: ease-out;
     animation-name: showing;
     animation-duration: 1s;
-    height: 15vh;
+    height: 22vh;
+}
+
+.hide{
+    animation-timing-function: ease-out;
+    animation-name: hiding;
+    animation-duration: 1s;
+    height: 0vh;
 }
 
 @keyframes showing {
     0% {height: 0vh;}
-    100% {height: 15vh;}
+    100% {height: 22vh;}
+}
+
+@keyframes hiding {
+    0% {height: 22vh;}
+    100% {height: 0vh;}
 }
 
 .colorButton {
-    color: #1c91ff
+    font-style: italic
 }
